--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "bluetooth_le_controller"
+path = "src/bin/bluetooth_le_controller.rs"
+
 [dependencies]
+bpaf = "0.7.4"
